1999-11-11  Michael Hohmuth  <hohmuth@innocent.com>

	* stage2/boot.c (load_image): grub_close was called after
	return, so exchange the order.
	* stage2/stage1_5.c (cmain): Call grub_close after grub_read.
	Set RET to the value returned by grub_read, and if RET is
	non-zero, call chain_stage2.
	* stage1/Makefile.am (BUILT_SOURCES): Removed.
	(CLEANFILES): Set to $(nodist_pkgdata_DATA).
	
1999-11-11  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	Suggested by Klaus Reichl:
	* stage2/builtins.c (print_root_device): New function.
	(root_func): If no argument is specified, call the function
	print_root_device and return.
	(rootnoverify_func): Likewise.
	* stage2/disk_io.c [!STAGE1_5] (print_completions): Call
	print_error even if IS_FILENAME is zero.
	If ERRNUM is non-zero, then return -1.
	* stage2/char_io.c [!STAGE1_5] (get_cmdline): Clear ERRNUM after
	calling print_completions to print the list as well.
	
	* stage2/asm.S [!STAGE1_5] (currticks): Set %eax to %cx:%dx
	correctly. Reported by Michael Hohmuth.
	
1999-11-06  Klaus Reichl  <Klaus.Reichl@alcatel.at>

	* grub/asmstub.c (get_diskinfo) [__linux__]: After opening the
	drive, flush the cache, other progs may have left over something
	in the cache.

1999-11-03  Gordon Matzigkeit  <gord@fig.org>

	* debian/rules: Add variables for cross-compilation.

	* debian/control (Standards-Version): Update to version 3.1.0.
	* debian/rules (build): Install manpages into /usr/share/man, and
	info into /usr/share/info in accordance with FHS.
	(binary-arch): Likewise, and put docs into /usr/share/doc.
	* debian/postinst: Use /usr/share/info, and manage compatibility
	/usr/doc/grub -> /usr/share/doc/grub symlink.
	* debian/prerm: Likewise.

	* stage2/Makefile.am (CLEANFILES): Change to
	$(nodist_pkgdata_DATA) so that the raw binary files are deleted.
	* stage1/Makefile.am (CLEANFILES): Likewise.

1999-11-06  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* grub/asmstub.c (grub_putchar) [HAVE_LIBCURSES]: Do not call